Build and release APK version 0.0.1 on 20250117_2114

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -15,7 +15,27 @@ buildscript {
         classpath("com.android.tools.build:gradle")
         classpath("com.facebook.react:react-native-gradle-plugin")
         classpath("org.jetbrains.kotlin:kotlin-gradle-plugin")
+        classpath 'com.google.gms:google-services:4.4.2'
     }
+}
+
+subprojects { subproject ->
+    ext {
+        def npmVersion = getNpmVersionArray()
+        versionMajor = npmVersion[0]
+        versionMinor = npmVersion[1]
+        versionPatch = npmVersion[2]
+    }
+
+}
+
+import groovy.json.JsonSlurper
+def getNpmVersionArray() { 
+    def inputFile = new File("$rootDir/../package.json")
+    def packageJson = new JsonSlurper().parseText(inputFile.text)
+    def version = packageJson["version"]
+    def (major, minor, patch) = version.tokenize('.')
+    return [Integer.parseInt(major), Integer.parseInt(minor), Integer.parseInt(patch)] as int[]
 }
 
 apply plugin: "com.facebook.react.rootproject"
