--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -79,8 +79,8 @@ android {
         applicationId "com.locket_upload"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 1
-        versionName "1.0"
+        versionCode(versionMajor * 10000 + versionMinor * 100 + versionPatch)
+        versionName "${versionMajor}.${versionMinor}.${versionPatch}"
     }
     signingConfigs {
         debug {
