--- a/package.json
+++ b/package.json
@@ -7,11 +7,28 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "build-android": "cd android && ./gradlew assembleRelease && adb install ./app/build/outputs/apk/release/app-release.apk && cd ..",
+    "deploy-android": "./build-deploy.sh"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.1.0",
+    "@react-navigation/native": "6.1.17",
+    "@react-navigation/native-stack": "6.9.26",
+    "@reduxjs/toolkit": "^2.5.0",
+    "axios": "^1.7.9",
     "react": "18.2.0",
-    "react-native": "0.73.8"
+    "react-native": "0.73.8",
+    "react-native-fs": "^2.20.0",
+    "react-native-gesture-handler": "2.18.0",
+    "react-native-image-picker": "^7.2.3",
+    "react-native-permissions": "^5.2.3",
+    "react-native-reanimated": "^3.16.7",
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "3.31.1",
+    "react-native-ui-lib": "^7.35.0",
+    "react-redux": "^9.2.0",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
