--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "react-native-dotenv": "^3.4.11",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "2.18.0",
+    "react-native-image-crop-tools": "^1.6.4",
     "react-native-image-picker": "^7.2.3",
+    "react-native-image-resizer": "^1.4.5",
     "react-native-permissions": "^5.2.3",
     "react-native-reanimated": "^3.16.7",
     "react-native-safe-area-context": "4.10.1",
