--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start": "react-native start",
     "test": "jest",
     "build-android": "cd android && ./gradlew assembleRelease && adb install ./app/build/outputs/apk/release/app-release.apk && cd ..",
+    "build-android-windows": "cd android && .\\gradlew assembleRelease && adb install .\\app\\build\\outputs\\apk\\release\\app-release.apk && cd ..",
     "deploy-with_codepush": "./build-deploy-codepush.sh",
     "deploy-android": "./build-deploy.sh"
   },
