--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "locket_upload",
-  "version": "0.0.9",
+  "version": "0.0.10",
   "private": true,
   "scripts": {
     "android": "react-native run-android",
@@ -14,7 +14,10 @@
     "deploy-android": "./build-deploy.sh"
   },
   "dependencies": {
+    "@notifee/react-native": "^9.1.8",
     "@react-native-async-storage/async-storage": "^2.1.0",
+    "@react-native-firebase/app": "^21.12.0",
+    "@react-native-firebase/messaging": "^21.12.0",
     "@react-navigation/native": "6.1.17",
     "@react-navigation/native-stack": "6.9.26",
     "@reduxjs/toolkit": "^2.5.0",
