--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "locket_upload",
-  "version": "0.0.10",
+  "version": "0.0.11",
   "private": true,
   "scripts": {
     "android": "react-native run-android",
@@ -11,6 +11,7 @@
     "build-android": "cd android && ./gradlew assembleRelease && adb install ./app/build/outputs/apk/release/app-release.apk && cd ..",
     "build-android-windows": "cd android && .\\gradlew assembleRelease && adb install .\\app\\build\\outputs\\apk\\release\\app-release.apk && cd ..",
     "deploy-with_codepush": "./build-deploy-codepush.sh",
+    "deploy-with_codepush-old": "./build-deploy-codepush-old.sh",
     "deploy-android": "./build-deploy.sh"
   },
   "dependencies": {
