--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "locket_upload",
-  "version": "0.0.11",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "android": "react-native run-android",
@@ -22,10 +22,13 @@
     "@react-navigation/native": "6.1.17",
     "@react-navigation/native-stack": "6.9.26",
     "@reduxjs/toolkit": "^2.5.0",
+    "add": "^2.0.6",
     "axios": "^1.7.9",
     "react": "18.2.0",
     "react-native": "0.73.8",
     "react-native-code-push": "^9.0.1",
+    "react-native-compressor": "^1.10.5",
+    "react-native-create-thumbnail": "^2.0.1",
     "react-native-dotenv": "^3.4.11",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "2.18.0",
@@ -37,8 +40,11 @@
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
     "react-native-ui-lib": "^7.35.0",
+    "react-native-video": "^6.10.2",
+    "react-native-video-trim": "^3.0.2",
     "react-redux": "^9.2.0",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "yarn": "^1.22.22"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
