--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@notifee/react-native": "^9.1.8",
     "@react-native-async-storage/async-storage": "^2.1.0",
+    "@react-native-camera-roll/camera-roll": "^7.10.0",
     "@react-native-firebase/app": "^21.12.0",
     "@react-native-firebase/messaging": "^21.12.0",
     "@react-navigation/native": "6.1.17",
@@ -42,6 +43,7 @@
     "react-native-ui-lib": "^7.35.0",
     "react-native-video": "^6.10.2",
     "react-native-video-trim": "^3.0.2",
+    "react-native-vision-camera": "4.3.1",
     "react-redux": "^9.2.0",
     "redux-persist": "^6.0.0",
     "yarn": "^1.22.22"
