--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,8 +20,12 @@ jobs:
           node-version: '18.x' # Hoặc phiên bản Node.js bạn đang sử dụng
 
       - name: Install dependencies
-        run: npm install # Hoặc yarn install nếu bạn dùng Yarn
-      
+        run: |
+          rm -rf node_modules
+          rm -f package-lock.json
+          npm cache clean --force
+          npm install # Hoặc yarn install nếu bạn dùng Yarn
+
       - name: Install Android dependencies
         uses: android-actions/setup-android@v2
         with:
