--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,8 +23,7 @@ jobs:
         run: |
           rm -rf node_modules
           rm -f package-lock.json
-          npm cache clean --force
-          npm install # Hoặc yarn install nếu bạn dùng Yarn
+          yarn install # Hoặc yarn install nếu bạn dùng Yarn
 
       - name: Install Android dependencies
         uses: android-actions/setup-android@v2
