--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '18.x' # Hoặc phiên bản Node.js bạn đang sử dụng
+          node-version: '20.x' # Hoặc phiên bản Node.js bạn đang sử dụng
 
       - name: Install dependencies
         run: |
@@ -27,8 +27,8 @@ jobs:
 
       - name: Set up environment variables
         run: |
-          mv .env.example .env
-          echo "${{ secrets.GOOGLE_SERVICE }}" > google-services.json
+          mv ./.env.example ./.env
+          echo "${{ secrets.GOOGLE_SERVICE }}" > ./google-services.json
           echo "${{ secrets.GOOGLE_SERVICE }}" > ./android/app/google-services.json
 
       - name: Install Android dependencies
