--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,10 +26,11 @@ jobs:
           yarn install # Hoặc yarn install nếu bạn dùng Yarn
 
       - name: Set up environment variables
+        env:
+          GOOGLE_SERVICES_JSON: ${{ secrets.GOOGLE_SERVICE_BASE64 }} #check the secret name
         run: |
           mv ./.env.examble ./.env
-          echo "${{ secrets.GOOGLE_SERVICE }}" > ./google-services.json
-          echo "${{ secrets.GOOGLE_SERVICE }}" > ./android/app/google-services.json
+          echo $GOOGLE_SERVICES_JSON | base64 -di > /android/app/google-services.json
 
       - name: Install Android dependencies
         uses: android-actions/setup-android@v2
