--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,7 +30,7 @@ jobs:
           GOOGLE_SERVICES_JSON: ${{ secrets.GOOGLE_SERVICE_BASE64 }} #check the secret name
         run: |
           mv ./.env.examble ./.env
-          echo $GOOGLE_SERVICES_JSON | base64 -di > ./android/app/google-services.json
+          echo $GOOGLE_SERVICES_JSON | base64 -d > ./android/app/google-services.json
 
       - name: Install Android dependencies
         uses: android-actions/setup-android@v2
