--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
       
       - name: Debug GOOGLE_SERVICES_JSON (Hidden Output)
         run: |
-          echo "${GOOGLE_SERVICES_JSON}" | head -c 100
+          echo "${{ secrets.GOOGLE_SERVICE_BASE64 }}" | head -c 100
 
 
       - name: Set up environment variables
