--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@react-navigation/native": "6.1.17",
     "@react-navigation/native-stack": "6.9.26",
     "@reduxjs/toolkit": "^2.5.0",
+    "@types/base-64": "^1.0.2",
     "add": "^2.0.6",
     "axios": "^1.7.9",
     "react": "18.2.0",
