--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "deploy-android": "./build-deploy.sh"
   },
   "dependencies": {
+    "@grpc/grpc-js": "^1.13.2",
+    "@grpc/proto-loader": "^0.7.13",
     "@notifee/react-native": "^9.1.8",
     "@react-native-async-storage/async-storage": "^2.1.0",
     "@react-native-camera-roll/camera-roll": "^7.10.0",
@@ -26,6 +28,7 @@
     "@types/base-64": "^1.0.2",
     "add": "^2.0.6",
     "axios": "^1.7.9",
+    "path": "^0.12.7",
     "react": "18.2.0",
     "react-native": "0.73.8",
     "react-native-code-push": "^9.0.1",
