--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "locket_upload",
-  "version": "0.1.5",
+  "version": "0.1.4",
   "private": true,
   "scripts": {
     "android": "react-native run-android",
@@ -49,6 +49,7 @@
     "react-native-vision-camera": "4.3.1",
     "react-redux": "^9.2.0",
     "redux-persist": "^6.0.0",
+    "rn-fetch-blob": "^0.12.0",
     "yarn": "^1.22.22"
   },
   "devDependencies": {
