--- a/package.json
+++ b/package.json
@@ -26,11 +26,12 @@
     "@types/base-64": "^1.0.2",
     "add": "^2.0.6",
     "axios": "^1.7.9",
+    "ffmpeg-kit-react-native": "^6.0.2",
     "path": "^0.12.7",
     "react": "18.2.0",
     "react-native": "0.73.8",
     "react-native-code-push": "^9.0.1",
-    "react-native-compressor": "^1.10.5",
+    "react-native-compressor": "1.11.0",
     "react-native-create-thumbnail": "^2.0.1",
     "react-native-dotenv": "^3.4.11",
     "react-native-fs": "^2.20.0",
