--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lint": "eslint .",
     "start": "react-native start",
     "test": "jest",
-    "build-android": "cd android && ./gradlew assembleRelease && adb install ./app/build/outputs/apk/release/app-release.apk && cd ..",
+    "build-android": "./build-android.sh",
     "build-android-windows": "cd android && .\\gradlew assembleRelease && adb install .\\app\\build\\outputs\\apk\\release\\app-release.apk && cd ..",
     "deploy-with_codepush": "./build-deploy-codepush.sh",
     "deploy-with_codepush-old": "./build-deploy-codepush-old.sh",
