--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@notifee/react-native": "^9.1.8",
     "@react-native-async-storage/async-storage": "^2.1.0",
     "@react-native-camera-roll/camera-roll": "^7.10.0",
+    "@react-native-community/blur": "^4.4.1",
     "@react-native-firebase/app": "^21.12.0",
     "@react-native-firebase/messaging": "^21.12.0",
     "@react-navigation/native": "6.1.17",
