--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -38,4 +38,5 @@ newArchEnabled=false
 
 # Use this property to enable or disable the Hermes JS engine.
 # If set to false, you will be using JSC instead.
+ORG_GRADLE_PROJECT_newArchEnabled = true
 hermesEnabled=true
