--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-native-gesture-handler": "2.18.0",
     "react-native-image-crop-tools": "^1.6.4",
     "react-native-image-picker": "^7.2.3",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-permissions": "^5.2.3",
     "react-native-reanimated": "^3.16.7",
     "react-native-safe-area-context": "4.10.1",
