--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "path": "^0.12.7",
     "react": "18.2.0",
     "react-native": "0.73.8",
+    "react-native-app-auth": "^8.0.2",
     "react-native-code-push": "^9.0.1",
     "react-native-create-thumbnail": "^2.0.1",
     "react-native-dotenv": "^3.4.11",
