--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -35,7 +35,7 @@
             <action android:name="android.intent.action.VIEW" />
             <category android:name="android.intent.category.DEFAULT" />
             <category android:name="android.intent.category.BROWSABLE" />
-            <data android:scheme="com.locket_upload" android:host="oauth" />
+            <data android:scheme="locketupload.spotify" android:host="oauth" /> 
         </intent-filter>
       </activity>
     </application>
