--- a/package.json
+++ b/package.json
@@ -30,9 +30,9 @@
     "crypto-js": "^4.2.0",
     "ffmpeg-kit-react-native": "https://github.com/quockhanh2004/ffmpeg-kit-react-native.git",
     "path": "^0.12.7",
+    "query-string": "^9.1.1",
     "react": "18.2.0",
     "react-native": "0.73.8",
-    "react-native-app-auth": "^8.0.2",
     "react-native-code-push": "^9.0.1",
     "react-native-create-thumbnail": "^2.0.1",
     "react-native-dotenv": "^3.4.11",
