--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "locket_upload",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "private": true,
   "scripts": {
     "android": "react-native run-android",
@@ -45,6 +45,7 @@
     "react-native-reanimated": "^3.16.7",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "4.0.0",
+    "react-native-text-ticker": "^1.14.0",
     "react-native-ui-lib": "^7.35.0",
     "react-native-video": "^6.10.2",
     "react-native-video-trim": "^3.0.2",
