--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
     "axios": "^1.7.9",
     "crypto-js": "^4.2.0",
     "ffmpeg-kit-react-native": "https://github.com/quockhanh2004/ffmpeg-kit-react-native.git",
+    "i18next": "^25.0.1",
     "path": "^0.12.7",
     "query-string": "^9.1.1",
     "react": "18.2.0",
+    "react-i18next": "^15.5.1",
     "react-native": "0.73.8",
     "react-native-code-push": "^9.0.1",
     "react-native-create-thumbnail": "^2.0.1",
