--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@notifee/react-native": "^9.1.8",
     "@react-native-async-storage/async-storage": "^2.1.0",
     "@react-native-camera-roll/camera-roll": "^7.10.0",
+    "@react-native-clipboard/clipboard": "^1.16.2",
     "@react-native-community/blur": "^4.4.1",
     "@react-native-firebase/app": "^21.12.0",
     "@react-native-firebase/messaging": "^21.12.0",
@@ -40,6 +41,7 @@
     "react-native-dotenv": "^3.4.11",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "2.18.0",
+    "react-native-haptic-feedback": "^2.3.3",
     "react-native-image-crop-tools": "^1.6.4",
     "react-native-image-picker": "^7.2.3",
     "react-native-linear-gradient": "^2.8.3",
@@ -56,6 +58,7 @@
     "react-native-vision-camera": "4.3.1",
     "react-redux": "^9.2.0",
     "redux-persist": "^6.0.0",
+    "rn-emoji-keyboard": "^1.7.0",
     "yarn": "^1.22.22"
   },
   "devDependencies": {
