--- a/android/build.gradle
+++ b/android/build.gradle
@@ -9,11 +9,11 @@ buildscript {
         ffmpegKitPackage = 'video'
     }
     repositories {
-        flatDir {
-            dirs 'libs'
-        }
         google()
         mavenCentral()
+        flatDir {
+            dirs "${rootProject.projectDir}/app/libs"
+        }
     }
     dependencies {
         classpath("com.android.tools.build:gradle")
