--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "eslint .",
     "start": "react-native start",
     "test": "jest",
+    "postinstall": "cd android && ./gradlew :app:downloadAar",
     "build-android": "./build-android.sh",
     "build-android-windows": "cd android && .\\gradlew assembleRelease && adb install .\\app\\build\\outputs\\apk\\release\\app-release.apk && cd ..",
     "deploy-with_codepush": "./build-deploy-codepush.sh",
