--- a/android/build.gradle
+++ b/android/build.gradle
@@ -6,7 +6,6 @@ buildscript {
         targetSdkVersion = 34
         ndkVersion = "25.1.8937393"
         kotlinVersion = "1.8.0"
-        ffmpegKitPackage = 'video'
     }
     repositories {
         google()
@@ -28,6 +27,16 @@ subprojects { subproject ->
         versionPatch = npmVersion[2]
     }
 
+}
+
+allprojects {
+    repositories {
+        google()
+        mavenCentral()
+        flatDir {
+            dirs "$rootDir/libs"
+        }
+    }
 }
 
 import groovy.json.JsonSlurper
