done setup workflow

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -63,6 +63,14 @@ android {
             dirs "$rootDir/libs"
         }
     }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
+    }
+    kotlinOptions {
+        jvmTarget = "17"
+    }
 }
 
 // ✅ Đặt ngoài block android
