--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "react-redux": "^9.2.0",
     "redux-persist": "^6.0.0",
     "rn-emoji-keyboard": "^1.7.0",
+    "socket.io-client": "^4.8.1",
     "yarn": "^1.22.22"
   },
   "devDependencies": {
