--- a/ios/Podfile
+++ b/ios/Podfile
@@ -9,17 +9,6 @@ platform :ios, '15.6'
 
 prepare_react_native_project!
 
-# If you are using a `react-native-flipper` your iOS build will fail when `NO_FLIPPER=1` is set.
-# because `react-native-flipper` depends on (FlipperKit,...) that will be excluded
-#
-# To fix this you can also exclude `react-native-flipper` using a `react-native.config.js`
-# ```js
-# module.exports = {
-#   dependencies: {
-#     ...(process.env.NO_FLIPPER ? { 'react-native-flipper': { platforms: { ios: null } } } : {}),
-# ```
-flipper_config = ENV['NO_FLIPPER'] == "1" ? FlipperConfiguration.disabled : FlipperConfiguration.enabled
-
 linkage = ENV['USE_FRAMEWORKS']
 if linkage != nil
   Pod::UI.puts "Configuring Pod with #{linkage}ally linked Frameworks".green
@@ -27,44 +16,22 @@ if linkage != nil
 end
 
 target 'locket_upload' do
+  pod 'ffmpeg-kit-react-native', :path => '../node_modules/ffmpeg-kit-react-native', :subspecs => ['full-gpl']
+  pod 'ffmpeg-kit-ios-full-gpl', :podspec => './ffmpeg-kit-ios-full-gpl.podspec'
+
   config = use_native_modules!
-  pod 'ffmpeg-kit-ios-full-gpl' , :podspec => './ffmpeg-kit-ios-full-gpl.podspec' 
-  pod 'ffmpeg-kit-react-native' , :subspecs => [ 'full-gpl' ], :podspec => '../node_modules/ffmpeg-kit-react-native/ffmpeg-kit-react-native.podspec'
+
+  pod 'FirebaseCore', :modular_headers => true
   pod 'GoogleUtilities', :modular_headers => true
-  # pod 'fmt', '6.2.1'
   use_react_native!(
     :path => config[:reactNativePath],
-    # Enables Flipper.
-    #
-    # Note that if you have use_frameworks! enabled, Flipper will not work and
-    # you should disable the next line.
-    :flipper_configuration => flipper_config,
-    # An absolute path to your application root.
+    :flipper_configuration => FlipperConfiguration.disabled,
     :app_path => "#{Pod::Config.instance.installation_root}/.."
   )
 
   target 'locket_uploadTests' do
     inherit! :complete
-    # Pods for testing
   end
-
-  # post_install do |installer|
-  #   installer.pods_project.targets.each do |target|
-  #     target.build_configurations.each do |config|
-  #       config.build_settings['CLANG_CXX_LANGUAGE_STANDARD'] = 'c++17'
-  #       config.build_settings['CLANG_CXX_LIBRARY'] = 'libc++'
-  #     end
-  #   end
-  # end
-
-  # post_install do |installer|
-  #   # https://github.com/facebook/react-native/blob/main/packages/react-native/scripts/react_native_pods.rb#L197-L202
-  #   react_native_post_install(
-  #     installer,
-  #     config[:reactNativePath],
-  #     :mac_catalyst_enabled => false
-  #   )
-  # end
 
   post_install do |installer|
     require_relative '../node_modules/react-native/scripts/react_native_pods'
@@ -73,8 +40,15 @@ target 'locket_upload' do
       config[:reactNativePath],
       :mac_catalyst_enabled => false
     )
-  
+
+    # Exclude problematic dependencies
     installer.pods_project.targets.each do |target|
+      if target.name == 'ffmpeg-kit-react-native'
+        target.build_configurations.each do |config|
+          config.build_settings['EXCLUDED_ARCHS[sdk=iphonesimulator*]'] = 'arm64'
+        end
+      end
+
       target.build_configurations.each do |config|
         config.build_settings['CLANG_CXX_LANGUAGE_STANDARD'] = 'c++17'
         config.build_settings['CLANG_CXX_LIBRARY'] = 'libc++'
