--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "lint": "eslint .",
     "start": "react-native start",
     "test": "jest",
-    "postinstall": "cd android && ./gradlew :app:downloadAar",
     "build-android": "./build-android.sh",
     "build-android-windows": "cd android && .\\gradlew assembleRelease && adb install .\\app\\build\\outputs\\apk\\release\\app-release.apk && cd ..",
     "deploy-with_codepush": "./build-deploy-codepush.sh",
@@ -30,7 +29,7 @@
     "add": "^2.0.6",
     "axios": "1.7.9",
     "crypto-js": "^4.2.0",
-    "ffmpeg-kit-react-native": "https://github.com/quockhanh2004/ffmpeg-kit-react-native.git",
+    "ffmpeg-kit-react-native": "https://gitpkg.vercel.app/lovegaoshi/ffmpeg-kit/react-native?4a0122d6dc3fb13237870dfea2533992f19c324a",
     "i18next": "^25.0.1",
     "path": "^0.12.7",
     "query-string": "^9.1.1",
@@ -56,7 +55,7 @@
     "react-native-text-ticker": "^1.14.0",
     "react-native-ui-lib": "^7.35.0",
     "react-native-video": "^6.10.2",
-    "react-native-video-trim": "^3.0.2",
+    "react-native-video-trim": "^3.0.9",
     "react-native-vision-camera": "4.3.1",
     "react-redux": "^9.2.0",
     "redux-persist": "^6.0.0",
@@ -66,7 +65,7 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@babel/preset-env": "^7.20.0",
-    "@babel/runtime": "^7.20.0",
+    "@babel/runtime": "^7.27.1",
     "@react-native/babel-preset": "0.73.21",
     "@react-native/eslint-config": "0.73.2",
     "@react-native/metro-config": "0.73.5",
@@ -82,5 +81,6 @@
   },
   "engines": {
     "node": ">=18"
-  }
+  },
+  "packageManager": "yarn@4.9.1"
 }
